update login verification

--- a/public/cadastro.html
+++ b/public/cadastro.html
@@ -16,7 +16,7 @@
         </div>
         <div id="container_login">
             <h1 id="login_h1">Cadastro</h1>
-            <form action="/cadastro" method="post" onsubmit="return ValidateForm()">
+            <form action="/cadastro" method="post" onsubmit="return ValidateFormRegister()">
                 <label for="email">E-mail: </label><br>
                 <input type="email" name="email" id="email"><br>
                 <label for="password">Senha: </label><br>
