--- a/public/jgpage.html
+++ b/public/jgpage.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/CSS/jgpage.css">
+    <link rel="stylesheet" href="./CSS/jgpage.css">
     <title>Document</title>
 </head>
 
@@ -28,7 +28,7 @@
         <li class="navline"><a href="" class="navlink">Linguagens</a></li>
         <li class="navline"><a href="" class="navlink">Contato</a></li>
     </ul>
-    <script src="/client.js"></script>
+    <script src="./client.js" type="module"></script>
 </body>
 
 </html>
